k8s/deployment.yaml
# Gruppe 1: Normalbetrieb
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hamilton-normal
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ventilator
      test: normal
  template:
    metadata:
      labels:
        app: ventilator
        test: normal
    spec:
      # --- HIER EINFÜGEN ---
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: test
                    operator: In
                    values:
                      - normal
              topologyKey: "kubernetes.io/hostname"
      # ---------------------
      containers:
        - name: ventilator
          image: ghcr.io/benmclemor/hamilton:latest
          command: ["/opt/hamilton/bin/ventilator-simulator"]
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
# Gruppe 2: Stress-Test
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hamilton-stress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ventilator
      test: stress
  template:
    metadata:
      labels:
        app: ventilator
        test: stress
    spec:
      containers:
        - name: ventilator
          image: ghcr.io/benmclemor/hamilton:latest
          command: ["/opt/hamilton/bin/ventilator-simulator"]
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
