k8s/sonarqube-setup.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarqube-db
spec:
  ports:
    - port: 5432
  selector:
    app: sonarqube-db
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarqube-db
spec:
  selector:
    matchLabels:
      app: sonarqube-db
  template:
    metadata:
      labels:
        app: sonarqube-db
    spec:
      containers:
      - name: postgres
        image: postgres:15
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarqube
spec:
  selector:
    matchLabels:
      app: sonarqube
  template:
    metadata:
      labels:
        app: sonarqube
    spec:
      securityContext:
        fsGroup: 1000
      containers:
      - name: sonarqube
        image: sonarqube:community
        ports:
        - containerPort: 9000
        volumeMounts:
        - name: plugin-volume
          mountPath: /opt/sonarqube/extensions/plugins
      volumes:
      - name: plugin-volume
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: sonarqube-service
spec:
  type: NodePort
  selector:
    app: sonarqube
  ports:
    - port: 9000
      targetPort: 9000
      nodePort: 30005
